Added musique.html and jeux-video.html, fixed footer

--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
                     <div></div>
                 </li>
                 <li class="mobile-nav__item">
-                    <a href="">Musique</a>
+                    <a href="./musique/musique.html">Musique</a>
                 </li>
                 <li class="mobile-nav__item">
-                    <a href="">Jeux vidéo</a>
+                    <a href="./jeux-video/jeux-video.html">Jeux vidéo</a>
                 </li>
                 <li class="mobile-nav__item">
                     <a href="">Livres</a>
@@ -43,13 +43,14 @@
             <a href="./index.html" class="desktop-nav__item">Nouveautés</a>
             <a class="desktop-nav__item">Sélection</a>
             <div class="desktop-nav__item separator">|</div>
-            <a class="desktop-nav__item">Musique</a>
-            <a class="desktop-nav__item">Jeux vidéo</a>
+            <a href="./musique/musique.html" class="desktop-nav__item">Musique</a>
+            <a href="./jeux-video/jeux-video.html" class="desktop-nav__item">Jeux vidéo</a>
             <a class="desktop-nav__item">Livres</a>
         </nav>
     </header>
 
     <header class="header-category">Dernières publications</header>
+    
     <div class="content-card">
         <div class="card-category musique-category">Musique</div>
         <img class="content-card__image" src="./images/5832782.jpeg">
@@ -126,7 +127,7 @@
 
     <footer class="main-footer">
         <p>2022 &#169; Juneco Web Services</p>
-        <a href=''>A propos</a>
+        <a href='./a-propos.html'>A propos</a>
     </footer>
 
     <script src='./main.js'></script>
