--- a/a-propos.html
+++ b/a-propos.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
-    <link rel="stylesheet" href="../main.css">
+    <link rel="stylesheet" href="./main.css">
     <title>undercurrent reviews</title>
 </head>
 
@@ -30,10 +30,10 @@
                     <div></div>
                 </li>
                 <li class="mobile-nav__item">
-                    <a href="">Musique</a>
+                    <a href="./musique/musique.html">Musique</a>
                 </li>
                 <li class="mobile-nav__item">
-                    <a href="">Jeux vidéo</a>
+                    <a href="./jeux-video/jeux-video.html">Jeux vidéo</a>
                 </li>
                 <li class="mobile-nav__item">
                     <a href="">Livres</a>
@@ -44,8 +44,8 @@
             <a href="./index.html" class="desktop-nav__item">Nouveautés</a>
             <a class="desktop-nav__item">Sélection</a>
             <div class="desktop-nav__item separator">|</div>
-            <a class="desktop-nav__item">Musique</a>
-            <a class="desktop-nav__item">Jeux vidéo</a>
+            <a href="./musique/musique.html" class="desktop-nav__item">Musique</a>
+            <a href="./jeux-video/jeux-video.html" class="desktop-nav__item">Jeux vidéo</a>
             <a class="desktop-nav__item">Livres</a>
         </nav>
     </header>
@@ -53,9 +53,19 @@
     <header class="header-category">A propos</header>
 
 
+    <div class="content-card">
+        <div class="content-card__text">
+            <p>Ce site est à la fois un bac à sable personnel d'essai en développement web et un moyen de partager des oeuvres qui m'ont touchées d'une manière ou d'une autre et qui sont, selon, trop peu connues.</p>
+            <p>J'espère que vous apprécierez votre visite !</p>
+        </div>
+    </div>
+
+
     <footer class="main-footer">
         <p>2022 &#169; Juneco Web Services</p>
         <a href='./a-propos.html'>A propos</a>
     </footer>
+
+    <script src='./main.js'></script>
 </body>
 </html>
