--- a/musique/index.html
+++ b/musique/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
-    <link rel="stylesheet" href="../main.css">
+    <link rel="stylesheet" href="../shared.css">
     <title>undercurrent reviews</title>
 </head>
 <body>
@@ -29,10 +29,10 @@
                     <div></div>
                 </li>
                 <li class="mobile-nav__item">
-                    <a href="./musique.html">Musique</a>
+                    <a href="./index.html">Musique</a>
                 </li>
                 <li class="mobile-nav__item">
-                    <a href="../jeux-video/jeux-video.html">Jeux vidéo</a>
+                    <a href="../jeux-video/index.html">Jeux vidéo</a>
                 </li>
                 <li class="mobile-nav__item">
                     <a href="">Livres</a>
@@ -43,15 +43,15 @@
             <a href="../index.html" class="desktop-nav__item">Nouveautés</a>
             <a class="desktop-nav__item">Sélection</a>
             <div class="desktop-nav__item separator">|</div>
-            <a href="./musique.html" class="desktop-nav__item">Musique</a>
-            <a href="../jeux-video/jeux-video.html" class="desktop-nav__item">Jeux vidéo</a>
+            <a href="./index.html" class="desktop-nav__item">Musique</a>
+            <a href="../jeux-video/index.html" class="desktop-nav__item">Jeux vidéo</a>
             <a class="desktop-nav__item">Livres</a>
         </nav>
     </header>
 
     <header class="header-category">Musique</header>
 
-<div class="content-card">
+<div id="mu_strato-fourth" class="content-card">
     <div class="card-category musique-category">Musique</div>
     <img class="content-card__image" src="../images/5832782.jpeg">
     <div class="content-card__title">
@@ -75,7 +75,7 @@
     </div>
 </div>
 
-<div class="content-card">
+<div id="mu_spock-feel" class="content-card">
     <div class="card-category musique-category">Musique</div>
     <img class="content-card__image" src="../images/e28d5be9a80ed51140d420c1f5a38be1-989x989x1.jpg">
     <div class="content-card__title">
@@ -101,7 +101,7 @@
 </div>
 
 <footer class="main-footer">
-    <p>2022 &#169; Juneco Web Services</p>
+    <p>2022 &#169; Juneco Web Design</p>
     <a href='../a-propos.html'>A propos</a>
 </footer>
 
