--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
+    <link rel="stylesheet" href="shared.css">
     <link rel="stylesheet" href="main.css">
     <title>undercurrent reviews</title>
 </head>
@@ -29,10 +30,10 @@
                     <div></div>
                 </li>
                 <li class="mobile-nav__item">
-                    <a href="./musique/musique.html">Musique</a>
+                    <a href="./musique/index.html">Musique</a>
                 </li>
                 <li class="mobile-nav__item">
-                    <a href="./jeux-video/jeux-video.html">Jeux vidéo</a>
+                    <a href="./jeux-video/index.html">Jeux vidéo</a>
                 </li>
                 <li class="mobile-nav__item">
                     <a href="">Livres</a>
@@ -43,15 +44,16 @@
             <a href="./index.html" class="desktop-nav__item">Nouveautés</a>
             <a class="desktop-nav__item">Sélection</a>
             <div class="desktop-nav__item separator">|</div>
-            <a href="./musique/musique.html" class="desktop-nav__item">Musique</a>
-            <a href="./jeux-video/jeux-video.html" class="desktop-nav__item">Jeux vidéo</a>
+            <a href="./musique/index.html" class="desktop-nav__item">Musique</a>
+            <a href="./jeux-video/index.html" class="desktop-nav__item">Jeux vidéo</a>
             <a class="desktop-nav__item">Livres</a>
         </nav>
     </header>
 
     <header class="header-category">Dernières publications</header>
-    
-    <div class="content-card">
+
+<div class="news-container">
+    <div class="content-card__new">
         <div class="card-category musique-category">Musique</div>
         <img class="content-card__image" src="./images/5832782.jpeg">
         <div class="content-card__title">
@@ -62,20 +64,13 @@
         </div>
         <div class="content-card__text">
             <p>Early Stratovarius has a tendency to surprise. The band kept changing at a pretty rapid pace during their first albums and they had their very proggy, experimental moments here and there. But hey, to me that's a good thing. Better listen to music that's trying to find its way than music that is stuck in a rut.</p>
-            <button class="more-text__button">Read more...</button>
-            <div class="more-text">
-            <p>On Fourth Dimension the band has clearly taken a step closer to their eventual destination - pointlessly cheery, wank-happy neoclassical euro-power metal. The melodies are now quite anthemic and you usually get a pretty good feeling listening to this album thanks to the energy and talented playing. Timo Kotipelto, the new singer, also has a clear tone of voice, well-suited for power metal, and he was a great pick for this band.</p>
-            <p>But then... as surely as a Bond villain trap slowly lowers James Bond into a shark pit, the unwitting listener is subjected to more and more bumpy experimentation as the album progresses. You could say Fourth Dimension starts out as a fun, well-meaning power metal album but eventually takes you through outer space and into other dimensions, and you're lucky if you survive intact from the trip.</p>
-            <p>First slightly out-of-place song is the very 80's sounding but mostly harmless "Galaxies". Then we get to "Winter" which is the one of the slowest Stratovarius songs in existence, almost like some sort of symphonic doom metal - quite uncharacteristic of the band. We reach the apex of messy experimenting on "030366", some type of industrial-laced oddity that the band itself probably wants to forget exists. After that, "Nightfall" too plods along at a slow pace and focuses on creating an interesting ambience through various effects instead of being balls-to-the-wall catchy. Gotta appreciate the imaginative approach... On the same note, while there are a few slower songs, there isn't a real power ballad on Fourth Dimension, which is pretty neat. More power metal albums should do this.</p>
-            <p>As expected of neoclassically influenced metal, these songs have an elegant air to them and Tolkki's shredding is highly impressive to experience. It's just a shame that while the band's talent is world-class, Tolkki's lyrics skills are still at a kindergarten-level and there are plenty of truly cringe-worthy moments throughout the album. Cheapens the sense of adventure somewhat. Still, this is the first uplifting and genuinely "power metal" Stratovarius album. It's not as straightforward and fully realized as their later albums but it makes up for it in chaotic creativity.</p>
-            <button class="collapse-text__button">Collapse</button>    
-            </div>
         </div>
-        <div class="content-card__extra">
-        </div>
+        <div class="article-link"><a href="./musique/index.html#mu_strato-fourth">Read full article...</a></div>
+
+
     </div>
 
-    <div class="content-card">
+    <div class="content-card__new">
         <div class="card-category musique-category">Musique</div>
         <img class="content-card__image" src="./images/e28d5be9a80ed51140d420c1f5a38be1-989x989x1.jpg">
         <div class="content-card__title">
@@ -86,21 +81,11 @@
         </div>
         <div class="content-card__text">
             <p> If you're comparing Spock's Beard to Genesis, then Feel Euphoria is to A Trick of the Tail as Snow is to The Lamb Lies Down On Broadway. In both cases, you have a situation where the charismatic frontman of the group has left after the band has just completed an ambitious double album, and the drummer (in this case Nick D'Virgilio) has stepped into the gap.</p>
-            <button class="more-text__button">Read more...</button>
-            <div class="more-text">
-                <p>Actually, in some ways Spock's Beard had it harder than Genesis. Sure, Peter Gabriel was important to Genesis - but he didn't exert such a heavy influence on the songwriting process as Neal Morse did in Spock's Beard before his departure. Genesis were fairly collaborative about how they did songwriting, whereas a large majority of Spock's Beard's material from The Light to Snow has Neal as the sole credited songwriter.</p>
-                <p>This means that for Feel Euphoria Spock's Beard had not one challenge but two: not only did they have to bed in a new vocalist, but they also had to adapt to a new songwriting and recording process - without Neal's steady hand at the tiller, but also with the new creative opportunities which naturally arise in such a situation.</p>                
-                <p>The end result doesn't entirely sound like the earlier Beard, but it's not so far away either. The mixture of modern rock and classic prog influences is still there, but the proportions are subtly different, as are the selections of what exactly the band take from each of those worlds. Some of the more left-field influences - like musicals, gospel, and Latin music - that Neal would toss in from time to time are dialled back; other sounds which haven't been a major part of the Beard's fabric start to creep in. (There's an electronic edge to the opening sections of the starting track which feels particularly fresh to Spock's Beard.)</p>                
-                <p>Is it a masterwork on the level of, say, V? No. But under the circumstances, I don't think you could reasonably expect Spock's Beard to produce one - the odds were always in favour of this being a transitional album which was hampered by the adjustment they needed to make.</p>                
-                <p>At the same time, it's significantly better than I expected. I don't envy the Beard the position they were in, and I'm sure they must have had a long think about whether it would be better to take their time about putting out a followup in order to give themselves time to adjust to the shift in band chemistry and really work on honing some new material, or work quickly in order to maintain their momentum and send the message that they were here to stay. In the end, they had the confidence to take the latter approach, and Feel Euphoria is good enough that I think that gamble paid off.</p>
-            <button class="collapse-text__button">Collapse</button>
-            </div>
         </div>
-        <div class="content-card__extra">
-        </div>
+        <div class="article-link"><a href="./musique/index.html#mu_spock-feel">Read full article...</a></div>
     </div>
 
-    <div class="content-card">
+    <div class="content-card__new">
         <div class="card-category jv-category">Jeu vidéo</div>
         <img class="content-card__image" src="./images/ico.jpg">
         <div class="content-card__title">
@@ -111,22 +96,13 @@
         </div>
         <div class="content-card__text">
             <p>In an industry that has always run with the idea of "bigger, better, and faster", Ico was the milestone of the PS2-generation that implied the true future of video games lies in minimalism and player connectivity.</p>
-            <button class="more-text__button">Read more...</button>
-            <div class="more-text">
-                <p>You can almost feel the testosterone of a Gears fanboy spiking the Ico lovefest of recent years. The game, when played by the wrong person, can be outright offensive. "I've played Zelda, dammit! I know you can do more in a video game than this!" they might yell. The idea of Ico being a piece of art isn't reinforced by its overly sentimental fanbase, but by the way it feels completely alien to some players even though it remains grounded in gameplay not too distant from more popular titles.</p>
-                <p>Ico's presence as minimal art can be narrowed down into a list: no HUD, IDM score, no real dialogue, etc. It's a matter of class. Team Ico who-- you guessed it! --developed Ico modeled the game entirely around what the core experience is and what would detract from it. The idea that your character cannot die in combat would break a The Legend of Zelda [ゼルダの伝説] game, but since Ico's main concern varies from those games it works as a strength. At Ico's core is the player's connection to Yorda, the girl you have at your side for the better part of the game, dragging her along every step of the way. While the audio and art direction are sublime, it is the core experience delivered through the platforming and puzzles that makes it a timeless adventure.</p>
-                <p>Since the PlayStation-era, games have grown more and more obsessed with player connection through cinematic presentation. Instead of deep storytelling, Ico creates a tangible emotional connection in the player through subliminal elements. The way the controller vibrates when you grab hold of Yorda's hand, the loneliness of the game's world, and the haunting music all exhort an emotional reaction out of the player that most games would try to attempt forcefully via FMVs and lengthy cut-scenes. It's remarkable how well Ico works without these things, as only an hour into the game I would feel my heart rate escalate when I had to leave Yorda behind or when I had to make a jump I wasn't quite sure I could manage. I didn't know why I was at this castle, I didn't know who Yorda was, but I wanted to escape it with her by my side. Through crafting a believable world with elegant presentation, Ico turned the 8-bit joke of saving the princess into an actual concern.</p>                    
-                <p>Between Metal Gear Solid 2: Sons of Liberty and Final Fantasy X [ファイナルファンタジーX], the PS2 era came into its own in 2001. Even with all Ico's heart and ambition, I can't say it's a superior game than those two. Yet, as a pure experience, Ico will forever be put in the hall of fame for the simplicity of its design (have I mention how the game is actually fun?) and its brilliant presentation. The "games as art" discussion has become null in recent years, between the chiptune scene and 8-bit decals in the walls of every nerd's home. Games have always been art. It wasn't until Ico that gamers got a real taste of games that stirred up emotion in the player through sheer interaction and existence in a different world.</p>                    
-                <p>Ico's ending won't make you cry and the games making you feel lonely dates back to Metroid [メトロイド], but 2001 brought about the first game to fill gamers with an intangible connection to an unrealistic scenario. And, it was all done through the player convincing his or herself through a personal connection to the world, not in-game cinemas and plot devices.</p>
-            <button class="collapse-text__button">Collapse</button>
-            </div>
         </div>
-        <div class="content-card__extra">
-        </div>
+        <div class="article-link"><a href="./jeux-video/index.html#jv_ico">Read full article...</a></div>
     </div>
+</div>
 
     <footer class="main-footer">
-        <p>2022 &#169; Juneco Web Services</p>
+        <p>2022 &#169; Juneco Web Design</p>
         <a href='./a-propos.html'>A propos</a>
     </footer>
 
