--- a/jeux-video/index.html
+++ b/jeux-video/index.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
-    <link rel="stylesheet" href="../main.css">
+    <link rel="stylesheet" href="../shared.css">
+    <link rel="stylesheet" href="./jv.css">
     <title>undercurrent reviews</title>
 </head>
 <body>
@@ -29,10 +30,10 @@
                     <div></div>
                 </li>
                 <li class="mobile-nav__item">
-                    <a href="../musique/musique.html">Musique</a>
+                    <a href="../musique/index.html">Musique</a>
                 </li>
                 <li class="mobile-nav__item">
-                    <a href="./jeux-video.html">Jeux vidéo</a>
+                    <a href="./index.html">Jeux vidéo</a>
                 </li>
                 <li class="mobile-nav__item">
                     <a href="">Livres</a>
@@ -43,15 +44,15 @@
             <a href="../index.html" class="desktop-nav__item">Nouveautés</a>
             <a class="desktop-nav__item">Sélection</a>
             <div class="desktop-nav__item separator">|</div>
-            <a href="../musique/musique.html" class="desktop-nav__item">Musique</a>
-            <a href="./jeux-video.html" class="desktop-nav__item">Jeux vidéo</a>
+            <a href="../musique/index.html" class="desktop-nav__item">Musique</a>
+            <a href="./index.html" class="desktop-nav__item">Jeux vidéo</a>
             <a class="desktop-nav__item">Livres</a>
         </nav>
     </header>
 
     <header class="header-category">Jeux vidéo</header>
 
-    <div class="content-card">
+    <div id="jv_ico" class="content-card">
         <div class="card-category jv-category">Jeu vidéo</div>
         <img class="content-card__image" src="../images/ico.jpg">
         <div class="content-card__title">
@@ -77,7 +78,7 @@
     </div>
 
 <footer class="main-footer">
-    <p>2022 &#169; Juneco Web Services</p>
+    <p>2022 &#169; Juneco Web Design</p>
     <a href='../a-propos.html'>A propos</a>
 </footer>
 
