Switch main index to grid

--- a/index.html
+++ b/index.html
@@ -55,6 +55,21 @@
 <div class="news-container">
     <div class="content-card__new">
         <div class="card-category musique-category">Musique</div>
+        <img class="content-card__image" src="./images/mdb-gods.jpeg">
+        <div class="content-card__title">
+            My Dying Bride - Like Gods of the Sun
+        </div>
+        <div class="content-card__subtitle">
+            A new direction
+        </div>
+        <div class="content-card__text">
+            <p>"Like Gods of the Sun" is the 4th full-length studio album by UK doom/death metal act My Dying Bride. The album was released through Peaceville Records in October 1996. It´s the successor to "The Angel and the Dark River" from 1995 and features the same sextet lineup who recorded the predecessor. It would however be the last album to feauture drummer Rick Miah and keyboard player/violinist Martin Powell.</p>
+        </div>
+        <div class="article-link"><a href="./musique/index.html#mu_mdb-gods">Read full article...</a></div>
+    </div>
+
+    <div class="content-card__new">
+        <div class="card-category musique-category">Musique</div>
         <img class="content-card__image" src="./images/5832782.jpeg">
         <div class="content-card__title">
             Stratovarius - Fourth Dimension
